--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -180,6 +180,11 @@ body {
     background-color: rgba(15, 15, 15, 0.15);
     outline: none;
     cursor: pointer;
+
+    &.active {
+      background-color: $primary-color;
+      color: $secondary-color;
+    }
   }
 }
 
